features fix scrollbar style

--- a/src/styles/global/_global.scss
+++ b/src/styles/global/_global.scss
@@ -29,6 +29,24 @@ a{
 }
 
 
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #3d9970 #1e1e1e;
+  }
+  
+  *::-webkit-scrollbar {
+    width: 1px;
+  }
+  
+  *::-webkit-scrollbar-track {
+    background: #1e1e1e;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background-color: #3d9970;
+    border-radius: 6px;
+    border: 2px solid #1e1e1e;
+  }
 
 .modal-circle{
     cursor: pointer;
